--- a/sass/index/_hero copy.scss
+++ b/sass/index/_hero copy.scss
@@ -8,57 +8,68 @@
 
   max-width: 1600px;
   max-height: 400px;
+
   background-image: linear-gradient(to right,
   rgba(47, 48, 58, 0.4),
   rgba(47, 48, 58, 0.4)),
-  url(../images/main/hero_mobile.jpg);
-}
+  url(../images/main/img_mobile@1x.jpg);
 
-@media screen and (max-width:767px), (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-.hero {
+  @media not all,
+  screen and (max-width:767px),
+  (-webkit-min-device-pixel-ratio: 2),
+  (min-resolution: 192dpi),
+  (min-resolution: 2dppx) {
     background-image: linear-gradient(to right,
     rgba(47, 48, 58, 0.4),
     rgba(47, 48, 58, 0.4)),
-    url(../images/main/hero_mobile2x.jpg);
+    url(../images/main/img_mobile@2x.jpg);
+  }
 }
-} 
 
-// @media screen and (min-width:$tablet) {
-//   .hero {
-//     background-image: linear-gradient(to right,
-//     rgba(47, 48, 58, 0.4),
-//     rgba(47, 48, 58, 0.4)),
-//     url(../images/main/hero_tablet.jpg);
-//   }
-// }
+@media screen and (min-width:$tablet) {
+  .hero {
+    background-image: linear-gradient(to right,
+    rgba(47, 48, 58, 0.4),
+    rgba(47, 48, 58, 0.4)),
+    url(../images/main/img_tablet@1x.jpg);
+  }
+}
 
-// @media screen and (min-width:$tablet), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-//  .hero {
-//     background-image: linear-gradient(to right,
-//     rgba(47, 48, 58, 0.4),
-//     rgba(47, 48, 58, 0.4)),
-//     url(../images/main/hero_tablet2x.jpg);
-//   } 
-// }
+@media not all,
+screen and (min-width:$tablet),
+(-webkit-min-device-pixel-ratio: 2),
+(min-resolution: 192dpi),
+(min-resolution: 2dppx) {
+ .hero {
+    background-image: linear-gradient(to right,
+    rgba(47, 48, 58, 0.4),
+    rgba(47, 48, 58, 0.4)),
+    url(../images/main/img_tablet@2x.jpg);
+  } 
+}
 
-// @media screen and (min-width:$desktop) {
-//   .hero {
-//     max-height: 600px;
-//     background-image: linear-gradient(to right,
-//     rgba(47, 48, 58, 0.4),
-//     rgba(47, 48, 58, 0.4)),
-//     url(../images/main/hero.jpg);
-//   }
-// }
-    
-// @media screen and (min-width:$desktop), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-//  .hero {
-//     background-image: linear-gradient(to right,
-//     rgba(47, 48, 58, 0.4),
-//     rgba(47, 48, 58, 0.4)),
-//     url(../images/main/hero2x.jpg);
-//   }
-// }
+@media screen and (min-width:$desktop) {
+  .hero {
+    max-height: 600px;
+    background-image: linear-gradient(to right,
+    rgba(47, 48, 58, 0.4),
+    rgba(47, 48, 58, 0.4)),
+    url(../images/main/img_desktop@1x.jpg);
+  }
+}
+
+@media not all,
+screen and (min-width:$desktop), 
+(-webkit-min-device-pixel-ratio: 2), 
+(min-resolution: 192dpi), 
+(min-resolution: 2dppx) {
+ .hero {
+    background-image: linear-gradient(to right,
+    rgba(47, 48, 58, 0.4),
+    rgba(47, 48, 58, 0.4)),
+    url(../images/main/img_desktop@2x.jpg);
+  }
+}
 
 .hero__container {
   margin: 0px auto;
