--- a/sass/index/_hero.scss
+++ b/sass/index/_hero.scss
@@ -12,7 +12,7 @@
   background-image: linear-gradient(to right,
   rgba(47, 48, 58, 0.4),
   rgba(47, 48, 58, 0.4)),
-  url(../images/main/hero_mobile.jpg);
+  url(../images/main/img_mobile@1x.jpg);
 
   @media not all,
   screen and (max-width:767px),
@@ -22,7 +22,7 @@
     background-image: linear-gradient(to right,
     rgba(47, 48, 58, 0.4),
     rgba(47, 48, 58, 0.4)),
-    url(../images/main/hero_mobile2x.jpg);
+    url(../images/main/img_mobile@2x.jpg);
   }
 }
 
@@ -31,7 +31,7 @@
     background-image: linear-gradient(to right,
     rgba(47, 48, 58, 0.4),
     rgba(47, 48, 58, 0.4)),
-    url(../images/main/hero_tablet.jpg);
+    url(../images/main/img_tablet@1x.jpg);
   }
 }
 
@@ -44,7 +44,7 @@ screen and (min-width:$tablet),
     background-image: linear-gradient(to right,
     rgba(47, 48, 58, 0.4),
     rgba(47, 48, 58, 0.4)),
-    url(../images/main/hero_tablet2x.jpg);
+    url(../images/main/img_tablet@2x.jpg);
   } 
 }
 
@@ -54,7 +54,7 @@ screen and (min-width:$tablet),
     background-image: linear-gradient(to right,
     rgba(47, 48, 58, 0.4),
     rgba(47, 48, 58, 0.4)),
-    url(../images/main/hero.jpg);
+    url(../images/main/img_desktop@1x.jpg);
   }
 }
 
@@ -67,7 +67,7 @@ screen and (min-width:$desktop),
     background-image: linear-gradient(to right,
     rgba(47, 48, 58, 0.4),
     rgba(47, 48, 58, 0.4)),
-    url(../images/main/hero2x.jpg);
+    url(../images/main/img_desktop@2x.jpg);
   }
 }
     
